# ed25519-fun

./: Cargo.toml  LICENSE  README.md  bench_output.txt
benches/: ed25519_benchmarks.rs
literature/: README.md
src/: constants.rs  curve25519_const.rs  ed25519.rs  errors.rs  field_element.rs  group_element.rs  keypair.rs  lib.rs  precomp.rs  public.rs  scalar_ops.rs  secret.rs  signature.rs
src/curve25519/: constants.rs  field_element.rs  group_element.rs  mod.rs  precomp.rs  scalar_ops.rs  utils.rs
tests/: ed25519_testing.rs  verify.input
