[package]
name = "ed25519-fun"
version = "0.0.0"
authors = ["Eduardo Yuzo Nakai <yuzonakai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "^0.3.1" }
hex = "^0.4"

[[bench]]
name = "ed25519_benchmarks"
harness = false

[dependencies]
subtle = { version = "^2.2.2", default-features = false }
sha2 = { version = "^0.8.1", default-features = false }
ed25519 = { version = "1", default-features = false }
rand = { version = "^0.7.3" }

[features]
nightly = ["subtle/nightly"]
